--- a/client/src/styles/Game.scss
+++ b/client/src/styles/Game.scss
@@ -246,25 +246,27 @@ $canvasFooterHeight: 4em;
       }
     }
 
-    .pick-turn {
+    .note-space {
       position: absolute;
-      top: 25%;
-      left: 25%;
-      width: 50%;
-      height: 50%;
-      background-color: white;
-      text-align: center;
-      padding: 0.5em;
-      z-index: 2;
-      overflow-y: auto;
+      top: 10%;
+      left: calc(50% - 100px);
+      width: 200px;
+      height: 150px;
+      background-color: gray;
+    }
 
-      ul {
-        list-style-type: none;
-        padding-left: 0;
+    .available-cards {
+      position: absolute;
+      top: calc(10% + 150px);
+      left: calc(50% - 100px);
+      width: 200px;
+      height: 300px;
+      overflow-x: hidden;
+      overflow-y: scroll;
 
-        li {
-          margin: 1em;
-        }
+      span {
+        display: inline-block;
+        margin: .5em;
       }
     }
 
@@ -285,87 +287,10 @@ $canvasFooterHeight: 4em;
         }
       }
 
-      .card {
-        position: absolute;
-        display: inline-block;
-        transition: transform 0.5s linear 0s;
-        -webkit-transition: -webkit-transform 0.5s linear 0s;
-        -moz-transition: -moz-transform 0.5s linear 0s;
-        -o-transition: -o-transform 0.5s linear 0s;
-
-        .front, .back {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          transition: transform 0.5s linear 0s;
-          -webkit-transition: -webkit-transform 0.5s linear 0s;
-          -moz-transition: -moz-transform 0.5s linear 0s;
-          -o-transition: -o-transform 0.5s linear 0s;
-          backface-visibility: hidden;
-          -webkit-backface-visibility: hidden;
-          background-size: 100% 100%;
-        }
-
-        .front {
-          transform: rotateY(180deg);
-          -webkit-transform: rotateY(180deg);
-          -moz-transform: rotateY(180deg);
-          -o-transform: rotateY(180deg);
-
-          .circle-outer {
-            fill: gray;
-          }
-
-          .circle-inner {
-            fill: black;
-          }
-        }
-
-        &.revealed, &.owned.not-selected {
-
-          .front {
-            transform: rotateY(0deg);
-            -webkit-transform: rotateY(0deg);
-            -moz-transform: rotateY(0deg);
-            -o-transform: rotateY(0deg);
-          }
-    
-          .back {
-            transform: rotateY(180deg);
-            -webkit-transform: rotateY(180deg);
-            -moz-transform: rotateY(180deg);
-            -o-transform: rotateY(180deg);
-          }
-
-        }
-
-        &.revealed.death {
-          box-shadow: 0px 0px 5px 5px red;
-        }
-    
-        &.selectable {
-          box-shadow: 0px 0px 5px 5px yellow;
-        }
-    
-        &.revealable {
-          box-shadow: 0px 0px 5px 5px green;
-        }
-    
-        &.selected {
-          z-index: 1;
-        }
-      }
-
       &.player-number-0 {
         .card .back .circle-outer, .username {
           fill: #55A;
           background-color: #55A;
-        }
-
-        .card .back .circle-inner, .username.point {
-          fill: #117;
-          background-color: #117;
-          color: #DDD;
         }
       }
 
@@ -374,24 +299,12 @@ $canvasFooterHeight: 4em;
           fill: #555;
           background-color: #555;
         }
-
-        .card .back .circle-inner, .username.point {
-          fill: #111;
-          background-color: #111;
-          color: #DDD;
-        }
       }
 
       &.player-number-2 {
         .card .back .circle-outer, .username {
           fill: #A55;
           background-color: #A55;
-        }
-
-        .card .back .circle-inner, .username.point {
-          fill: #711;
-          background-color: #711;
-          color: #DDD;
         }
       }
 
@@ -400,24 +313,12 @@ $canvasFooterHeight: 4em;
           fill: #5A5;
           background-color: #5A5;
         }
-
-        .card .back .circle-inner, .username.point {
-          fill: #171;
-          background-color: #171;
-          color: #DDD;
-        }
       }
 
       &.player-number-4 {
         .card .back .circle-outer, .username {
           fill: #5AA;
           background-color: #5AA;
-        }
-
-        .card .back .circle-inner, .username.point {
-          fill: #177;
-          background-color: #177;
-          color: #DDD;
         }
       }
 
@@ -426,12 +327,6 @@ $canvasFooterHeight: 4em;
           fill: #AA5;
           background-color: #AA5;
         }
-
-        .card .back .circle-inner, .username.point {
-          fill: #771;
-          background-color: #771;
-          color: #DDD;
-        }
       }
 
       &.player-number-6 {
@@ -439,24 +334,12 @@ $canvasFooterHeight: 4em;
           fill: #A5A;
           background-color: #A5A;
         }
-
-        .card .back .circle-inner, .username.point {
-          fill: #717;
-          background-color: #717;
-          color: #DDD;
-        }
       }
 
       &.player-number-7 {
         .card .back .circle-outer, .username {
           fill: #AAA;
           background-color: #AAA;
-        }
-
-        .card .back .circle-inner, .username.point {
-          fill: #777;
-          background-color: #777;
-          color: #DDD;
         }
       }
 
@@ -518,50 +401,6 @@ $canvasFooterHeight: 4em;
     text-align: center;
     background-image: linear-gradient(45deg, #841, #A63);
     box-shadow: 0px 10px 10px gray;
-
-    .highest-bid-indicator {
-      text-align: left;
-      float: left;
-      font-weight: bold;
-      padding: 1em;
-
-      span {
-        display: block;
-      }
-    }
-
-    .make-bid {
-      text-align: right;
-
-      span {
-        display: inline-block;
-        margin-top: 20px;
-      }
-
-      ul {
-        display: inline-block;
-        list-style-type: none;
-        margin-top: 0;
-        padding-left: 0;
-        overflow-x: auto;
-        white-space: nowrap;
-        max-width: 30%;
-        float: right;
-
-        .bid {
-          display: inline-block;
-
-          button {
-            padding: 10px;
-            margin: 10px;
-
-            &.biddable {
-              box-shadow: 0px 0px 5px 5px yellow;
-            }
-          }
-        }
-      }
-    }
   }
 
   #lobby-actions {
@@ -589,46 +428,6 @@ $cardSize: 73px;
 
   .username {
     margin: #{$cardSize / 3} auto
-  }
-
-  .card {
-    top: 0;
-    left: calc(50% - #{$cardSize * 1.35});
-    width: $cardSize;
-    height: $cardSize;
-    margin: $cardMargin;
-    border-radius: $cardSize;
-    z-index: 8;
-
-    &:nth-child(2) {
-      transform: translate(#{$cardSize * .5}, 0px);
-      z-index: 7;
-    }
-    &:nth-child(3) {
-      transform: translate(#{$cardSize}, 0px);
-      z-index: 6;
-    }
-    &:nth-child(4) {
-      transform: translate(#{$cardSize * 1.5}, 0px);
-      z-index: 5;
-    }
-
-    &.selected-index-0 {
-      transform: translate(#{$cardSize * 1.5}, #{$cardSize * -1.25});
-      z-index: 1 !important;
-    }
-    &.selected-index-1 {
-      transform: translate(#{$cardSize * 1}, #{$cardSize * -1.25});
-      z-index: 2 !important;
-    }
-    &.selected-index-2 {
-      transform: translate(#{$cardSize * .5}, #{$cardSize * -1.25});
-      z-index: 3 !important;
-    }
-    &.selected-index-3 {
-      transform: translate(0, #{$cardSize * -1.5});
-      z-index: 4 !important;
-    }
   }
 
   &.east {    
@@ -710,26 +509,6 @@ $cardSize: 73px;
 
     .canvas-footer {
       height: 6em;
-
-      .highest-bid-indicator {
-        width: calc(100% - 2em);
-
-        span {
-          position: absolute;
-          top: 1em;
-
-          &:nth-child(2) {
-            right: 1em;
-          }
-        }
-      }
-
-      .make-bid ul {
-        width: calc(100% - 100px);
-        max-width: initial;
-        margin-top: 0.5em;
-        text-align: left;
-      }
     }
 
 
@@ -747,16 +526,6 @@ $cardSize: 73px;
 
       .username {
         margin: #{$cardSize / 3} auto
-      }
-
-      .card {
-        width: $cardSize;
-        height: $cardSize;
-        margin: $cardMargin;
-    
-        &.selected {
-          transform: translate(0, #{$cardSize * -1.5});
-        }
       }
     }
   }
