--- a/client/src/styles/Game.scss
+++ b/client/src/styles/Game.scss
@@ -5,6 +5,8 @@ $messageSendHeight: 30px;
 $playerListSize: 20px;
 $canvasHeaderHeight: 3em;
 $canvasFooterHeight: 4em;
+$cardMargin: 8px;
+$cardSize: 73px;
 
 #connection-error {
   position: fixed;
@@ -246,27 +248,37 @@ $canvasFooterHeight: 4em;
       }
     }
 
-    .note-space {
-      position: absolute;
-      top: 10%;
-      left: calc(50% - 100px);
-      width: 200px;
-      height: 150px;
-      background-color: gray;
-    }
-
-    .available-cards {
-      position: absolute;
-      top: calc(10% + 150px);
-      left: calc(50% - 100px);
-      width: 200px;
-      height: 300px;
-      overflow-x: hidden;
+    .game-area {
+      width: 100%;
+      height: calc(100% - $cardSize - 2em);
+      text-align: center;
+      padding: 1em;
       overflow-y: scroll;
 
-      span {
-        display: inline-block;
-        margin: .5em;
+      .placed-card {
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      .note-space {
+        position: relative;
+        margin: 2em auto;
+        width: 300px;
+        height: 200px;
+        background-color: gray;
+      }
+
+      .available-cards {
+        margin: 1em auto 2em auto;
+        width: 300px;
+        height: 300px;
+        overflow-y: scroll;
+
+        span {
+          display: inline-block;
+          margin: .5em;
+        }
       }
     }
 
@@ -398,7 +410,9 @@ $canvasFooterHeight: 4em;
     left: 0;
     width: 100%;
     height: $canvasFooterHeight;
+    line-height: $canvasFooterHeight;
     text-align: center;
+    font-weight: bold;
     background-image: linear-gradient(45deg, #841, #A63);
     box-shadow: 0px 10px 10px gray;
   }
@@ -415,9 +429,6 @@ $canvasFooterHeight: 4em;
 #svg-templates {
   display: none;
 }
-
-$cardMargin: 8px;
-$cardSize: 73px;
 
 .chair {
   width: calc(#{(($cardMargin * 2) + $cardSize) * 4});
