Adds Some Prompts and Card Words

--- a/client/src/styles/Game.scss
+++ b/client/src/styles/Game.scss
@@ -269,6 +269,7 @@ $cardSize: 73px;
         height: 200px;
         appearance: none;
         border: none;
+        border-radius: 5px;
         background-color: black !important;
       }
 
