--- a/client/src/styles/Game.scss
+++ b/client/src/styles/Game.scss
@@ -292,12 +292,23 @@ $cardSize: 73px;
       .available-cards {
         margin: 1em auto 2em auto;
         width: 300px;
-        height: 300px;
+        height: calc(100% - 300px - 2em);
         overflow-y: scroll;
 
         button {
           display: inline-block;
           margin: .5em;
+        }
+
+        &::-webkit-scrollbar {
+          -webkit-appearance: none;
+          width: 7px;
+        }
+        
+        &::-webkit-scrollbar-thumb {
+          border-radius: 4px;
+          background-color: rgba(0, 0, 0, .5);
+          box-shadow: 0 0 1px rgba(255, 255, 255, .5);
         }
       }
     }
