--- a/client/src/styles/Game.scss
+++ b/client/src/styles/Game.scss
@@ -262,6 +262,7 @@ $cardSize: 73px;
       text-align: center;
       padding: 1em;
       overflow-y: scroll;
+      box-sizing: border-box;
 
       .placed-card {
         position: absolute;
@@ -436,12 +437,13 @@ $cardSize: 73px;
   }
 
   .canvas-footer {
+    display: grid;
+    align-items: center;
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     height: $canvasFooterHeight;
-    line-height: $canvasFooterHeight;
     text-align: center;
     font-weight: bold;
     background-image: linear-gradient(45deg, #841, #A63);
@@ -547,6 +549,10 @@ $cardSize: 73px;
       overflow-y: auto;
       top: 6em;
       height: calc(100% - 6em - 6em);
+
+      .game-area .note-space {
+        margin: 0 auto 2em auto;
+      }
     }
 
     .canvas-footer {
