--- a/client/src/styles/Game.scss
+++ b/client/src/styles/Game.scss
@@ -70,10 +70,16 @@ $cardSize: 73px;
         opacity: 0.7;
       }
 
+      .player-score {
+        border: 1px solid black;
+        padding: .25em;
+        margin-right: .25em;
+      }
+
       .player-name {
         height: 30px;
         line-height: 30px;
-        max-width: 90px;
+        max-width: 80px;
         overflow: hidden;
         display: inline-block;
         text-overflow: ellipsis;
