--- a/client/src/styles/Game.scss
+++ b/client/src/styles/Game.scss
@@ -286,6 +286,11 @@ $cardSize: 73px;
         border: none;
         border-radius: 5px;
         background-color: black !important;
+
+        &.selected {
+          outline: 2px solid green;
+          box-shadow: 0px 0px 30px green;
+        }
       }
 
       .card {
