--- a/client/src/styles/Home.scss
+++ b/client/src/styles/Home.scss
@@ -1,4 +1,17 @@
 .page.home {
+  #already-connected-message {
+    padding: 1em;
+    text-align: center;
+  }
+
+  .content-container {
+    background-color: rgb(116,86,77);
+    margin-top: 1em;
+    border-radius: 15px;
+    padding: 2em 0;
+    min-width: 280px;
+  }
+
   .page-body {
     width: 75%;
     margin: 0 auto;
@@ -12,7 +25,7 @@
     margin: 10px 5px;
   }
 
-  #public-game-list{
+  #public-game-list {
     margin-top: 25px;
 
     ul {
