--- a/client/src/styles/Login.scss
+++ b/client/src/styles/Login.scss
@@ -1,13 +1,34 @@
 .page.login {
-  #username {
-    &.available {
-      border: 1px solid green;
+  form {
+    background-color: rgb(116,86,77);
+    padding: 0 2em 2em 2em;
+    border-radius: 10px;
+
+    label[for="username"]{
+      display: inline-block;
+      width: 100%;
+      text-align: left;
+      font-size: 22px;
     }
 
-    &.unavailable {
-      border: 1px solid red;
+    #username {
+      display: block;
+      width: 100%;
+      margin: 1em 0;
+      appearance: none;
+      background-color: transparent;
+      border: none !important;
+      outline: none !important;
+      font-weight: bold;
+      font-size: 25px;
+      text-align: center;
+      padding: 0;
+    }
+
+    #description {
+      display: inline-block;
+      margin: 2em 0 .5em 0;
+      font-size: 20px;
     }
   }
-
-  
 }
