Changes Tile Padding

--- a/client/src/styles/Game.scss
+++ b/client/src/styles/Game.scss
@@ -251,6 +251,7 @@ $cardSize: 73px;
       }
 
       .card {
+        padding: 5px 6px !important;
         background-color: white;
         touch-action: none;
 
